--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,13 @@
         android:padding="10dp"
         android:gravity="center"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="补丁包文本!"
+        android:padding="10dp"
+        android:gravity="center"/>
+
     <Button
         android:id="@+id/loadPatch"
         android:layout_width="match_parent"
